<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/pref_cat_downloads">

    <CheckBoxPreference
            android:key="pref_dl_wifi_only"
            android:title="@string/pref_dl_wifi_only_title"
            android:summary="@string/pref_dl_wifi_only_summary"
            android:defaultValue="false"/>
    <Preference
            android:key="pref_dl_dir"
            android:title="@string/pref_dl_dir"/>
    <CheckBoxPreference
            android:key="pref_dl_override"
            android:title="@string/pref_dl_override"
            android:defaultValue="false"/>
    <PreferenceCategory android:title="@string/pref_dl_cat_playlist">
        <CheckBoxPreference
                android:key="pref_dl_pl_save_own_dir"
                android:title="@string/pref_dl_pl_save_own_dir_title"
                android:summary="@string/pref_dl_pl_save_own_dir_summary"
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:key="pref_dl_pl_artist_dir"
                android:title="@string/pref_dl_pl_artist_dir_title"
                android:summary="@string/pref_dl_pl_artist_dir_summary"
                android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>